--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "yiisoft/yii2": "~2.0.0",
-        "yiisoft/yii2-imagine": "~2.1.0"
+        "yiisoft/yii2": "~2.0.0"
     },
     "require-dev": {
       "phpunit/phpunit": "~4.0",
